--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://thalysonalexr.github.com/portfolio/">
     <title>Thalyson A. Rodrigues | Web Developer</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="/portfolio/static/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/p,ortfolio/static/favicon/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/portfolio/static/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="/portfolio/static/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/portfolio/static/favicon/favicon-192x192.png">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://kit.fontawesome.com/3940bdfd5c.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
