adding first release

--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="Portfolio de projetos e contato de Thalyson A. Rodrigues | Desenvolvedor Web">
-    <meta name="keywords" content="Backend,Frontend,PHP,JS,Portfolio,Programador,Desenvolvedor,Desenvolvedor Web,Web,Portfolio programador,HTML5,CSS3,Skills,Projetos Web,Orcamento Web,Contato programador,Contato Desenvolvedor">
-    <meta name="robots" content="index,follow">
-    <meta name="author" content="Thalyson Alexandre Rodrigues de Sousa">
-    <meta property="og:locale" content="pt_BR">
-    <meta property="og:title" content="Thalyson A. Rodrigues | Web Developer">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://thalysonalexr.github.com/portfolio/">
-    <title>Thalyson A. Rodrigues | Web Developer</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="/p,ortfolio/static/favicon/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/portfolio/static/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/portfolio/static/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/portfolio/static/favicon/favicon-192x192.png">
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <noscript>Este site necessita do JavaScript habilitado para funcionar :(</noscript>
-  </body>
+<html lang="pt-br">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="description" content="Portfolio de projetos e contato de Thalyson A. Rodrigues | Desenvolvedor Web">
+  <meta name="keywords"
+    content="Backend,Frontend,PHP,JS,Portfolio,Programador,Desenvolvedor,Desenvolvedor Web,Web,Portfolio programador,HTML5,CSS3,Skills,Projetos Web,Orcamento Web,Contato programador,Contato Desenvolvedor">
+  <meta name="robots" content="index,follow">
+  <meta name="author" content="Thalyson Alexandre Rodrigues de Sousa">
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:title" content="Thalyson A. Rodrigues | Web Developer">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://thalysonalexr.github.com/portfolio/">
+  <title>Thalyson A. Rodrigues | Web Developer</title>
+  <link rel="icon" type="image/png" sizes="16x16" href="/p,ortfolio/static/favicon/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/portfolio/static/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/portfolio/static/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/portfolio/static/favicon/favicon-192x192.png">
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+  <noscript>Este site necessita do JavaScript habilitado para funcionar :(</noscript>
+</body>
+
 </html>
